[package]
name = "xkcd"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.56.1"
publish = false

[dependencies]
http = "0.2.6"
once_cell = "1.10.0"
reqwest = { version = "0.11.9", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
time = "0.3.7"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
