[package]
name = "xkcd"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.56.1"
publish = false

[dependencies]
bytes = "1.1.0"
http = "0.2.6"
http-body = "0.4.4"
hyper = { version = "0.14.17", features = ["client", "http1"] }
hyper-tls = "0.5.0"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
time = "0.3.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = "0.2.4"
url = "2.2.2"
