[package]
name = "xkcd"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.56.1"
publish = false

[dependencies]
anyhow = "1.0.56"
bytes = "1.1.0"
clap = { version = "3.1.6", features = ["derive"] }
http = "0.2.6"
http-body = "0.4.4"
hyper = { version = "0.14.17", features = ["client", "http1"] }
hyper-tls = "0.5.0"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "offline"] }
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = "0.2.4"
url = "2.2.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
